--- a/project-01/src/sass/components/section-program.scss
+++ b/project-01/src/sass/components/section-program.scss
@@ -1,18 +1,21 @@
 .section-program {
   display: flex;
   position: relative;
-  background-color: #111517;
+  background-color: $first-lightdark-color;
 }
 
 .section-program__wrapper {
-  display: flex;
-  flex-direction: column;
+  @include center-flex('col');
+  // display: flex;
+  // flex-direction: column;
+  // flex-wrap: nowrap;
   padding-top: 46px;
   // background: #111517;
 
   @include tablet {
-    padding: 47px 40px 0px;
-    margin-bottom: 160px;
+    padding: 46px 40px 0px;
+    // margin-bottom: 160px;
+    margin-bottom: 166px;
   }
 
   @include desktop {
@@ -29,31 +32,34 @@
 }
 
 .section-program__title {
-  font-size: 20px;
-  line-height: 1.65;
+  @include font-settings($tenth-text-size, 1.65, 1.2px);
+  // font-size: 20px;
+  // line-height: 1.65;
+  // letter-spacing: 1.2px;
   margin: 0px 0px 23px 0px;
   text-align: center;
-  letter-spacing: 1.2px;
 
   @include tablet {
-    font-size: 26px;
-    line-height: 2.405;
+    @include font-height($twenty-six-text-size, 2.405);
+    // font-size: 26px;
+    // line-height: 2.405;
     margin-bottom: 30px;
     text-align: left;
   }
 
   @include desktop {
-    font-size: 42px;
-    line-height: 1.489;
+    @include font-settings($forty-two-text-size, 1.489, 2px);
+    // font-size: 42px;
+    // line-height: 1.489;
+    // letter-spacing: 2px;
     padding-left: 35px;
     margin-bottom: 30px;
-    text-align: left;
-    letter-spacing: 2px;
   }
 
   @include desktop-wide {
-    font-size: 46px;
-    line-height: 1.365;
+    @include font-height($forty-six-text-size, 1.365);
+    // font-size: 46px;
+    // line-height: 1.365;
     padding-left: 186px;
     margin-bottom: 82px;
   }
@@ -82,7 +88,7 @@
     height: 282px;
     background-image: url(../../images/pic-tabl.png);
     right: 0px;
-    bottom: 52px;
+    bottom: 58px;
   }
 
   @include desktop {
