--- a/project-01/src/sass/helpers/variables.scss
+++ b/project-01/src/sass/helpers/variables.scss
@@ -48,8 +48,11 @@ $ninth-text-size: 19px;
 $tenth-text-size: 20px;
 
 // Переназвати та вставити в код
+// $custom-font-size: 12.5px;
 // $custom-font-size: 16.667px;
+// $custom-font-size: 18.75px;
 // $custom-font-size: 37.5px;
+// $custom-font-size: 58.333px;
 
 $twenty-one-text-size: 21px;
 $twenty-two-text-size: 22px;
@@ -61,6 +64,7 @@ $twenty-nine-text-size: 29px;
 
 $forty-two-text-size: 42px;
 $forty-six-text-size: 46px;
+$forty-eight-text-size: 48px;
 
 
 // $tenth-font-size: 20px;
@@ -75,13 +79,22 @@ $secondary-text-height: 1.8;
 $first-white-color: #ffffff;
 $second-white-color: #fdfefe;
 $third-white-color: #e0e0e0;
+$fourth-white-color: #f1f1f1;
+// Прозорість
+// $first-white-opacity-color:
 $first-lightgrey-color: #d1d1d1;
 $second-lightgrey-color: #b9b9b9;
+$third-lightgrey-color: #bbbbbb;
 $first-grey-color: #858585;
+$first-grey-opacity-color: #85858580;
+$second-grey-color: #546264;
 $first-red-color: #ff0000;
 $first-orange-color: #ff6b08;
 $first-green-color: #09ab09;
 $first-lightdark-color: #111517;
+$first-lightdark-opacity-color: #1d1d1b1c;
+$second-lightdark-opacity-color: #1d1d1b0a;
+$third-lightdark-opacity-color: #1d1d1b17;
 $first-dark-color: #18191d;
 $first-black-color: #000000;
 
