--- a/project-01/src/sass/components/header-training.scss
+++ b/project-01/src/sass/components/header-training.scss
@@ -1,8 +1,10 @@
 .section-training__wrapper {
   @include tablet {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    @include center-flex('spbtw');
+    flex-wrap: nowrap;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: space-between;
   }
 
   @include desktop {
@@ -15,13 +17,15 @@
 }
 
 .section-training__content {
-  display: flex;
-  flex-direction: column;
+  @include center-flex('col');
+  // display: flex;
+  // flex-direction: column;
   align-items: start;
-
+  
   @include tablet {
-    display: flex;
-    flex-direction: column;
+    @include center-flex('col');
+    // display: flex;
+    // flex-direction: column;
     justify-content: start;
     max-width: 280px;
   }
@@ -38,71 +42,78 @@
 }
 
 .section-training__title {
+  @include font-settings($tenth-text-size, 1.45, 0.6px);
+  // font-size: 20px;
+  // line-height: 1.45;
+  // letter-spacing: 0.6px;
+  // color: #18191d;
   text-align: left;
-  font-size: 20px;
-  line-height: 1.45;
-  color: #18191d;
   margin: 0px 0px 26px 0px;
-  letter-spacing: 0.6px;
-
+  
   @include tablet {
-    font-size: 26px;
-    line-height: 1.291;
+    @include font-height($twenty-six-text-size, 1.291);
+    // font-size: 26px;
+    // line-height: 1.291;
     padding-top: 8px;
     margin: 0px 0px 26px 0px;
   }
-
+  
   @include desktop {
-    font-size: 48px;
-    line-height: 1.208;
-    letter-spacing: 1.05px;
+    @include font-settings($forty-eight-text-size, 1.208, 1.05px);
+    // font-size: 48px;
+    // line-height: 1.208;
+    // letter-spacing: 1.05px;
     margin: 0px 0px 28px 0px;
   }
-
+  
   @include desktop-wide {
-    font-size: 58.333px;
-    line-height: 1.34;
+    @include font-settings(58.333px, 1.34, 1.4px);
+    // font-size: 58.333px;
+    // line-height: 1.34;
+    // letter-spacing: 1.4px;
     margin-bottom: 24px;
-    letter-spacing: 1.4px;
   }
 }
 
 .section-training__slogan {
+  @include font-settings($fifth-text-size, 1.386, 0.623px);
+  // font-size: 15px;
+  // line-height: 1.386;
+  // letter-spacing: 0.623px;
+  // color: #18191d;
   text-align: left;
-  font-size: 15px;
-  line-height: 1.386;
-  color: #18191d;
   margin: 0px 0px 36px 0px;
-  letter-spacing: 0.623px;
-
+  
   &::first-line {
-    font-weight: 500;
-    color: #b9b9b9;
+    font-weight: $font-weight-medium;
+    color: $second-lightgrey-color;
   }
-
+  
   &--colortext {
-    color: #ff6b08;
+    color: $first-orange-color;
   }
-
+  
   @include tablet {
     line-height: 1.35;
     margin-bottom: 32px;
   }
-
+  
   @include desktop {
     min-width: 480px;
-    font-size: 18px;
-    line-height: 1.463;
+    @include font-settings($eigth-text-size, 1.463, 0.8px);
+    // font-size: 18px;
+    // line-height: 1.463;
+    // letter-spacing: 0.8px;
     margin-bottom: 63px;
-    letter-spacing: 0.8px;
   }
-
+  
   @include desktop-wide {
-    font-size: 21px;
-    line-height: 1.6;
-    margin-bottom: 40px;
     min-width: 540px;
-    letter-spacing: 1px;
+    @include font-settings($twenty-one-text-size, 1.6, 1px);
+    // font-size: 21px;
+    // line-height: 1.6;
+    // letter-spacing: 1px;
+    margin-bottom: 40px;
   }
 }
 
