--- a/project-01/src/sass/components/header.scss
+++ b/project-01/src/sass/components/header.scss
@@ -1,5 +1,5 @@
 .header {
-  @include center-flex('col-ver');
+  @include center-flex('col');
   // flex-direction: column;
   background-color: $first-white-color;
 }
