--- a/project-01/src/sass/components/navigation.scss
+++ b/project-01/src/sass/components/navigation.scss
@@ -1,6 +1,7 @@
 .navigation {
-  display: flex;
-  justify-content: space-between;
+  @include center-flex('spbtw');
+  // display: flex;
+  // justify-content: space-between;
   align-items: center;
 
   @include desktop {
