--- a/project-01/src/sass/components/section-choosing.scss
+++ b/project-01/src/sass/components/section-choosing.scss
@@ -1,8 +1,10 @@
 .section-choosing {
   min-height: 636px;
+  // min-height: 630px;
 
   @include tablet {
-    min-height: 412px;
+    min-height: 402px;
+    // min-height: 412px;
   }
 
   // @include desktop {}
@@ -13,14 +15,17 @@
 }
 
 .section-choosing__wrapper {
-  display: flex;
-  flex-direction: column;
+  @include center-flex('col');
+  // display: flex;
+  // flex-direction: column;
+  flex-wrap: nowrap;
   height: 398px;
-  background: #111517;
+  background: $first-lightdark-color;
   padding: 0px 20px;
 
   @include tablet {
-    height: 198px;
+    // height: 198px;
+    height: 188px;
     // min-height: 190px;
     padding: 0px 40px;
   }
@@ -37,34 +42,38 @@
 }
 
 .section-choosing__title {
-  font-size: 20px;
-  color: rgb(255, 255, 255);
-  line-height: 1.5;
+  @include font-settings($tenth-text-size, 1.5, 1.2px);
+  // font-size: 20px;
+  // line-height: 1.5;
+  // letter-spacing: 1.2px;
+  // color: rgb(255, 255, 255);
   text-align: left;
   margin: 0px 0px 16px 0px;
   padding: 0px;
   white-space: pre-line;
-  letter-spacing: 1.2px;
-
+  
   @include tablet {
-    font-size: 26px;
+    @include font-settings($twenty-six-text-size, 1.2, 1.5px);
+    // font-size: 26px;
+    // letter-spacing: 1.5px;
     text-align: center;
     margin-bottom: 22px;
     white-space: initial;
-    letter-spacing: 1.5px;
   }
-
+  
   @include desktop {
-    font-size: 42px;
-    line-height: 1.346;
+    @include font-settings($forty-two-text-size, 1.346, 2px);
+    // font-size: 42px;
+    // line-height: 1.346;
+    // letter-spacing: 2px;
     margin-bottom: 32px;
     z-index: 2;
-    letter-spacing: 2px;
   }
 
   @include desktop-wide {
-    font-size: 46px;
-    line-height: 1.365;
+    @include font-height($forty-six-text-size, 1.365);
+    // font-size: 46px;
+    // line-height: 1.365;
     padding-right: 30px;
     margin-bottom: 46px;
     z-index: 2;
