--- a/project-01/src/sass/components/section-form.scss
+++ b/project-01/src/sass/components/section-form.scss
@@ -1,4 +1,5 @@
 .section-form {
+  @include center-flex('col-ver');
   background-color: $first-lightdark-color;
   @include bgr-image('../../images/form-bgr.png', cover, no-repeat);
   // background-image: url(../../images/form-bgr.png);
@@ -123,9 +124,6 @@
 
   @include desktop-wide {
     @include font-settings($twenty-five-text-size, 1.5, 1.2px);
-    // font-size: 25px;
-    // line-height: 1.5;
-    // letter-spacing: 1.2px;
     margin: 0px 0px 51px;
   }
 }
