--- a/project-01/src/sass/helpers/mixins.scss
+++ b/project-01/src/sass/helpers/mixins.scss
@@ -7,9 +7,17 @@
     align-items: center;
   }
 
+  @else if $type=='col' {
+    flex-direction: column;
+  }
+
   @else if $type=='col-ver' {
     flex-direction: column;
     align-items: center;
+  }
+
+  @else if $type=='row' {
+    flex-direction: row;
   }
 
   @else if $type=='hor' {
@@ -27,20 +35,39 @@
     // align-items: center;
   }
 }
+
 // @include center-flex('spbtw');
 
 @mixin pseudo($display: inline-block, $content: '') {
   display: $display;
   content: $content;
 }
+
 // @include pseudo(inline-block, '\2107');
 // @include pseudo($display: block);
+
+@mixin absolute-tl($position, $top, $left) {
+  position: $position;
+  top: $top;
+  left: $left;
+}
+
+// @include absolute-tl(absolute, 2px, -2px);
+
+@mixin absolute-tr($position, $top, $right) {
+  position: $position;
+  top: $top;
+  right: $right;
+}
+
+// @include absolute-tr(absolute, 2px, -2px);
 
 @mixin font-family-settings($family, $weight, $color) {
   font-family: $family;
   font-weight: $weight;
   color: $color;
 }
+
 // @include font-family-settings('Montserrat', bold,  #111517);
 
 @mixin font-settings($size, $height, $letter-spacing) {
@@ -48,30 +75,42 @@
   line-height: $height;
   letter-spacing: $letter-spacing;
 }
+
 // @include font-settings($primary-text-size, 1.6, 1.2px);
 
 @mixin font-colors($size, $color) {
   font-size: $size;
   color: $color;
 }
+
 // @include font-colors(50px, green);
 
 @mixin font-height($size, $height) {
   font-size: $size;
   line-height: $height;
 }
+
 // @include font-height($primary-text-size, 1.6);
+
+@mixin line-letter($height, $letter-spacing) {
+  line-height: $height;
+  letter-spacing: $letter-spacing;
+}
+
+// @include line-letter(1.6, 1.1px);
 
 
 @mixin width-percent($width-elem, $width-cont) {
   width: $width-elem / $width-cont * 100%;
 }
+
 // @include width-percent(493px, 1210px);
 // width: 300px / 960px * 100%;
 
 @mixin height-percent($height-elem, $height-cont) {
   height: $height-elem / $height-cont * 100%;
 }
+
 // @include height-percent(644px, 1210px);
 // height: 300px / 960px * 100%;
 
@@ -81,6 +120,7 @@
   background-repeat: $repeat;
   // background-position: center; ($pos)
 }
+
 // @include bgr-image('../../images/bgr-01.png', contain, no-repeat, center);
 
 // Mixins for Media Queries
